fixed footer icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ footer ul {
 
 footer ul li {
     display: inline;
-    padding: 20px 20px 0 0;
+    padding: 20px 40px 0 0;
 }
 
 /* MEDIA QUERIES */
